# meincraft

./: .gitignore  CMakeLists.txt  README.md  block.h  camera.h  glad.c  main.cpp  shader.h  texture.h  version  versions.md
includes/: glad.h
shaders/: fragment.shader  vertex.shader
src/: camera.h  game.h  glad.c  main.cpp  settings.h  shader.h  texture.h  window.h
src/Graphics/: EBO.h  VAO.h  VBO.h
src/World/: NEWchunk.h  block.h  chunk.h  world.h
